[package]
name = "bevy_mod_osc"
version = "0.2.0"
edition = "2021"

readme = "README.md"
description = "OSC plugin for Bevy engine"
license = "WTFPL"
authors = ["Fumiya Funatsu <funatsu.fumiya@gmail.com>"]
repository = "https://github.com/funatsufumiya/bevy_mod_osc"
keywords = ["osc"]

[dev-dependencies]
# bevy = "0.14"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_asset"]}
bevy_async_task = "0.2"
rosc = "~0.10"
chrono = "0.4.19"
async-std = "1.13.0"
lazy_static = "1.5.0"
