[package]
name = "bevy_mod_osc"
version = "0.4.3"
edition = "2021"

readme = "README.md"
description = "OSC plugin for Bevy engine"
license = "WTFPL, 0BSD"
authors = ["Fumiya Funatsu <funatsu.fumiya@gmail.com>"]
repository = "https://github.com/funatsufumiya/bevy_mod_osc"
keywords = ["osc"]

[dev-dependencies]
bevy = "^0.16"

[dependencies]
bevy = { version = "^0.16", default-features = false, features = ["bevy_asset"]}
bevy_async_task = "^0.8"
rosc = "^0.11"
chrono = "0.4.41"
async-std = "1.13.0"
lazy_static = "1.5.0"
